plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven {
		name = "Hypixel"
		url = uri("https://repo.hypixel.net/repository/Hypixel/")
	}
	maven {
		name = "Modrinth"
		url = uri("https://api.modrinth.com/maven")
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"geileraddons" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Compile against the shared protocol API. The official Fabric implementation is supplied as
	// a separate mod so GeilerAddons and SkyHanni use one channel owner at runtime.
	implementation "net.hypixel:mod-api:${project.hypixel_mod_api_version}"
	// The Fabric bridge owns registration and decoding at runtime. Keep it as a mod so every
	// consumer resolves the same shared channel owner instead of bundling a second copy.
	runtimeOnly "maven.modrinth:hypixel-mod-api:${project.hypixel_mod_api_fabric_version}"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
	// Sources are UTF-8 and contain non-ASCII literals (the section sign, GUI glyphs), but javac
	// defaults to the platform encoding - Cp1252 on this machine. Loom happens to set this
	// already; stating it means a toolchain change can't quietly turn those literals into mojibake.
	it.options.encoding = 'UTF-8'
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

// The pure boundary checks run without a Minecraft client or server. Include the client source
// set because the formatter and island rules live there in this split-environment project.
sourceSets {
	test {
		compileClasspath += sourceSets.client.output + sourceSets.client.compileClasspath
		runtimeClasspath += sourceSets.client.output + sourceSets.client.runtimeClasspath
	}
}

tasks.named("compileTestJava") {
	dependsOn tasks.named("compileClientJava")
}

tasks.register("offlineChecks", JavaExec) {
	dependsOn tasks.named("testClasses")
	classpath = sourceSets.test.runtimeClasspath
	mainClass = "geiler.addons.client.module.impl.OfflineChecks"
}

// OfflineChecks is a JavaExec harness rather than a JUnit suite; the normal test task must not
// treat its main-only source as a failed zero-test discovery.
tasks.named("test") {
	failOnNoDiscoveredTests = false
}

tasks.named("check") {
	dependsOn tasks.named("offlineChecks")
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
